fixed the whole spacing of the page

--- a/styles/categorieslist.css
+++ b/styles/categorieslist.css
@@ -1,15 +1,16 @@
+.categories-list-container {
+    width: 100%;
+}
+
 .categories-list {
     align-items: center;
     margin-top: 2px;
-    margin-bottom: 50px;
-    justify-content: space-around;
-    margin-left: 2px;
-    margin-right: 2px;
+    display: flex;
+    justify-content: center;
 }
 
 .categories-list ol {
     margin-top: 0px;
-    margin-left: 50px;
     margin-block-start: 0em;
     margin-block-end: 0em;
     list-style-type: decimal;
@@ -30,7 +31,7 @@
     font-weight: bold;
     color: black;
     text-decoration: none;
-    margin-left: 20px;
+    margin: 10px 20px 10px 20px;
 }
 
 .category-button img {
