--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,6 @@
 .footer{
     color: rgba(129, 2, 36, 0.9);
     height: 80px;
-    margin-top: 100px;
     opacity: 0.6;
     padding: 50px;
     position: relative;
@@ -9,6 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
+    padding-top: 0px;
 }
 
 .footer h6{
